//  Copyright 2013 Walter Schulze
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.

package ast;

import "code.google.com/p/gogoprotobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_stringer_all) = false;

message Rules {
	optional Init Root = 1;
	repeated Init Init = 2;
	repeated Transition Transition = 3;
	repeated IfExpr IfExpr = 4;
}

message Init {
	optional string Package = 1;
	optional string Message = 2;
	//not set for the root
	optional string Field = 3; 
	optional string State = 4;
}

message Transition {
	optional string Src = 1;
	optional string Input = 2;
	optional string Dst = 3;
}

message IfExpr {
	optional Expr Condition = 1;
	optional StateExpr Then = 2;
	optional StateExpr Else = 3;
}

//union
message StateExpr {
	optional string State = 1;
	optional IfExpr IfExpr = 2;
}

//union
message Expr {
	optional Terminal Terminal = 1;
	optional Function Function = 2;
}

message Function {
	optional string Name = 1;
	repeated Expr Params = 2;
}

message Terminal {
	optional string Literal = 1;

	optional bool BoolValue = 2;
	optional int64 Int64Value = 3;
	optional uint64 Uint64Value = 4;
	optional string StringValue = 5;

	optional Variable Variable = 6;
}

message Variable {
	optional string Package  = 1;
	optional string Message = 2;
	optional string Field = 3;
	optional string Part = 4;
}

